objects/Expense_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Paid__c</fullName>
        <inlineHelpText>Date when the amount is actually paid</inlineHelpText>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Due Date Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expense_Name__c</fullName>
        <formula>Expense__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <label>Expense</label>
        <referenceTo>Expense__c</referenceTo>
        <relationshipLabel>Expense Line Items</relationshipLabel>
        <relationshipName>Expense_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Formatted_Due_Date__c</fullName>
        <formula>Text(Day(DATEVALUE(Due_Date__c)))  &amp; &apos; &apos; &amp;  CASE(MONTH(DATEVALUE(Due_Date__c)),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot;None&quot;) &amp; &apos; &apos; &amp; Text(Year(DATEVALUE(Due_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Due Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formatted_Paid_Date__c</fullName>
        <formula>Text(Day(Date_Paid__c)) &amp; &apos; &apos; &amp; CASE(MONTH(Date_Paid__c), 
1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
12, &quot;Dec&quot;, 
&quot;None&quot;) &amp; &apos; &apos; &amp; Text(Year(Date_Paid__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Paid Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Paid By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Expense Line Items</relationshipLabel>
        <relationshipName>Expense_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Paid</fullName>
                    <default>true</default>
                    <label>Not Paid</label>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Expense Line Item</label>
    <nameField>
        <displayFormat>ELI-{000000}</displayFormat>
        <label>Expense Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>